# stm32_motor_driver

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile
.devcontainer/: Dockerfile
cmake/: build.cmake  common.cmake  cubemx.cmake  submodules.cmake  target.cmake
components/stm32l4xx/: CMakeLists.txt  stm32l4xx.cmake  stm32l4xx_flash.ld  stm32l4xx_hal_conf.h  stm32l4xx_it.c  stm32l4xx_it.h  stm32l4xx_startup.s  stm32l4xx_system.c
cubemx/: .mxproject  cubemx.ioc
cubemx/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usart.h
cubemx/Core/Src/: gpio.c  i2c.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  sysmem.c  system_stm32l4xx.c  tim.c
cubemx/Drivers/CMSIS/Core/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
cubemx/Drivers/CMSIS/Core/Template/ARMv8-M/: main_s.c  tz_context.c
cubemx/Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l412xx.h  stm32l422xx.h  stm32l431xx.h  stm32l432xx.h  stm32l433xx.h  stm32l443xx.h  stm32l451xx.h  stm32l452xx.h  stm32l462xx.h  stm32l471xx.h  stm32l475xx.h  stm32l496xx.h  stm32l4a6xx.h  stm32l4p5xx.h  stm32l4q5xx.h  stm32l4r5xx.h  stm32l4r7xx.h  stm32l4s5xx.h
cubemx/Drivers/CMSIS/RTOS/Template/: cmsis_os.h
cubemx/cmake/: gcc-arm-none-eabi.cmake
cubemx/cmake/stm32cubemx/: CMakeLists.txt
main/: CMakeLists.txt  gpio.c  gpio.h  i2c.c  i2c.h  main.c  main.h  syscalls.c  sysmem.c  tim.c  tim.h  usart.c  usart.h
make/: build.mk  common.mk  cubemx.mk  debug.mk  flash.mk  linters.mk  monitor.mk  scripts.mk  submodules.mk  target.mk
requirements/: submodules.txt
scripts/: linter.sh  linters.sh  submodule.sh  submodules.sh
